tests/reference/asr-index_non_integer_substring3-8bfe715.stderr
semantic error: Substring index must be of type integer
 --> tests/errors/index_non_integer_substring3.f90:4:16
  |
4 |     print *, x(1.1)
  |                ^^^ 
